@startuml
left to right direction

skinparam classAttributeIconSize 0

class carts {
    - id: string
    - total_price: double
    - user_id: string
    + get(userId: string): Cart
    + create(userId: string): Cart
    + update(cart: Cart): Cart
}

class cart_items {
    - id: string
    - cart_id: string
    - book_sku: string
    - quantity: int
    - unit_price: double
    - total_price: double
}

class orders {
    - id: string
    - total_price: double
    - name: string
    - address: string
    - phone: string
    - email: string
    - method: int
    - status: int
    - invoice: int
    - note: string
    - reason: string
    - is_payment: boolean
    - vnp_txn_ref: string
    - created_at: date
    - created_by: string
    - updated_by: string
    - canceled_at: date
    - confirmed_at: date
    - delivered_at: date
    - rejected_at: date
    + get(): List<orders>
    + create(order: Order): Order
    + update(order: Order): Order
    + search(keyword: string): List<orders>
    + findById(id: string): Order
    + findByCreatedBy(userId: string): List<orders>
    + cancel(id: string): void
    + confirm(id: string): void
    + reject(id: string): void
}

class order_items {
    - id: string
    - order_id: string
    - book_sku: string
    - quantity: int
    - unit_price: double
    - total_price: double
}

class users {

}

class books {

}

' Quan hệ rõ ràng với nhãn
users "1" o-- "0..1" carts : owns
users "1" o-- "*" orders : places
carts "1" o-- "*" cart_items : contains
orders "1" o-- "*" order_items : includes

books "1" o-- "*" cart_items : selected in
books "1" o-- "*" order_items : purchased in

@enduml
